--- a/trunk/SourceCode/Android/android_server/res/layout/dialog_gps.xml
+++ b/trunk/SourceCode/Android/android_server/res/layout/dialog_gps.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent" 
+	android:orientation="vertical" android:layout_width="fill_parent"
 	android:background="@color/white_smoke" android:layout_height="fill_parent"
 	android:gravity="center_horizontal">
 	<LinearLayout android:id="@+id/linearLayout2"
@@ -21,11 +21,11 @@
 		android:id="@+id/line_dialog_gps_chat" android:gravity="center_vertical">
 		<ImageView android:id="@+id/imageView2"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/title_test"></ImageView>
-		<TextView android:layout_width="wrap_content"
-			android:textColor="@color/black" android:textSize="16dp"
-			android:layout_height="wrap_content" android:id="@+id/textView1"
-			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:src="@drawable/chat_icon"></ImageView>
+		<TextView android:layout_width="wrap_content" android:layout_marginLeft="5dp"
+			android:textColor="@color/black" android:textSize="18dp"
+			android:textStyle="bold" android:layout_height="wrap_content"
+			android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium"
 			android:text="@string/gps_dialog_chat"></TextView>
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
@@ -33,11 +33,11 @@
 		android:id="@+id/line_dialog_gps_info" android:gravity="center_vertical">
 		<ImageView android:id="@+id/imageView2"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/title_test"></ImageView>
-		<TextView android:layout_width="wrap_content"
-			android:textColor="@color/black" android:textSize="16dp"
-			android:layout_height="wrap_content" android:id="@+id/textView1"
-			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:src="@drawable/manager_icon"></ImageView>
+		<TextView android:layout_width="wrap_content" android:layout_marginLeft="5dp"
+			android:textColor="@color/black" android:textSize="18dp"
+			android:textStyle="bold" android:layout_height="wrap_content"
+			android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium"
 			android:text="@string/gps_dialog_info"></TextView>
 	</LinearLayout>
 </LinearLayout>
