--- a/trunk/SourceCode/Android/android_server/res/layout/content_promotion.xml
+++ b/trunk/SourceCode/Android/android_server/res/layout/content_promotion.xml
@@ -2,14 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:background="@color/white_smoke"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
-	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:id="@+id/linearLayout2"
-		android:gravity="center_vertical">
-		<ImageView android:layout_width="wrap_content" android:id="@+id/image_promotion"
-			android:layout_height="wrap_content" android:src="@drawable/icon"></ImageView>
+	<LinearLayout android:id="@+id/linearLayout2"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:padding="5dp" android:gravity="center_vertical"
+		android:background="@drawable/bg_header">
+		<ImageView android:id="@+id/imageView1" android:src="@drawable/title_test"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:scaleType="centerInside"></ImageView>
 		<TextView android:layout_width="wrap_content" android:id="@+id/textView1"
 			android:textColor="@color/black" android:layout_height="wrap_content"
-			android:text="@string/promotion_title" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
+			android:layout_weight="1.0" android:text="@string/promotion_title"
+			android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
+		<ImageView android:id="@+id/imageView1" android:src="@drawable/title_test"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:scaleType="centerInside"></ImageView>
 	</LinearLayout>
 	<ScrollView android:layout_width="fill_parent"
 		android:layout_weight="1.0" android:id="@+id/scrollView1"
