--- a/SourceCode/Android/android_staff/res/layout/dialog_detail.xml
+++ b/SourceCode/Android/android_staff/res/layout/dialog_detail.xml
@@ -2,6 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical" android:background="@color/white_smoke"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
+	<LinearLayout android:id="@+id/linearLayout2"
+		android:layout_width="fill_parent" android:layout_height="wrap_content"
+		android:padding="5dp" android:gravity="center_vertical"
+		android:background="@drawable/bg_header">
+		<ImageView android:id="@+id/imageView1" android:src="@drawable/title_test"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:scaleType="centerInside"></ImageView>
+		<TextView android:layout_marginLeft="5dip" android:textSize="14dip"
+			android:textStyle="bold" android:textAppearance="?android:attr/textAppearanceMedium"
+			android:layout_width="wrap_content" android:id="@+id/listtest_title"
+			android:layout_height="wrap_content" android:textColor="@color/black"
+			android:text="@string/delivery_content_dialog"></TextView>
+	</LinearLayout>
 	<LinearLayout android:id="@+id/linearLayout1"
 		android:layout_width="fill_parent" android:layout_height="wrap_content">
 		<ImageView android:src="@drawable/icon"
@@ -63,6 +76,40 @@
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:text="TextView" android:id="@+id/item_delivery_price"></TextView>
 			</LinearLayout>
+			<LinearLayout android:id="@+id/linearLayout5"
+				android:layout_width="fill_parent" android:layout_height="wrap_content"
+				android:gravity="center_vertical">
+				<ImageView android:src="@drawable/clock_icon"
+					android:layout_width="40dp" android:layout_height="wrap_content"
+					android:id="@+id/imageView2"></ImageView>
+				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
+					android:textColor="@color/black" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:text="TextView"
+					android:id="@+id/item_delivery_date"></TextView>
+			</LinearLayout>
 		</LinearLayout>
+	</LinearLayout>
+	<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
+		android:textSize="18dp" android:layout_marginTop="20dp"
+		android:textAppearance="?android:attr/textAppearanceSmall"
+		android:textStyle="bold" android:layout_width="wrap_content"
+		android:text="@string/delivery_content_note" android:textColor="@color/black"
+		android:gravity="center_horizontal" android:layout_gravity="center_horizontal"></TextView>
+	<EditText android:lines="6" android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp" android:layout_height="wrap_content"
+		android:id="@+id/editText1" android:layout_width="fill_parent">
+		<requestFocus></requestFocus>
+	</EditText>
+	<CheckBox android:textColor="@color/black" android:textStyle="bold"
+		android:text="@string/delivery_content_check"
+		android:layout_marginLeft="10dp" android:layout_height="wrap_content"
+		android:id="@+id/checkBox1" android:layout_width="fill_parent"></CheckBox>
+	<LinearLayout android:layout_height="wrap_content"
+		android:id="@+id/linearLayout6" android:layout_width="fill_parent"
+		android:layout_gravity="center_vertical" android:gravity="center_horizontal">
+		<Button android:layout_height="wrap_content" android:text="@string/delivery_content_note"
+			android:layout_width="wrap_content" android:id="@+id/button2"></Button>
+		<Button android:layout_height="wrap_content" android:text="@string/delivery_content_map"
+			android:layout_width="wrap_content" android:id="@+id/button1"></Button>
 	</LinearLayout>
 </LinearLayout>
