--- a/trunk/SourceCode/Android/android_staff/res/layout/dialog_detail.xml
+++ b/trunk/SourceCode/Android/android_staff/res/layout/dialog_detail.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:background="@color/white_smoke"
-	android:layout_width="fill_parent" android:layout_height="fill_parent">
+	android:minWidth="500dp" android:minHeight="800dp" android:orientation="vertical"
+	android:background="@color/white_smoke" android:layout_marginTop="30dp"
+	android:layout_marginBottom="30dp" android:layout_width="fill_parent"
+	android:layout_height="wrap_content">
 	<LinearLayout android:id="@+id/linearLayout2"
 		android:layout_width="fill_parent" android:layout_height="wrap_content"
 		android:padding="5dp" android:gravity="center_vertical"
@@ -19,7 +21,7 @@
 		android:layout_width="fill_parent" android:layout_height="wrap_content">
 		<ImageView android:src="@drawable/icon"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
-			android:id="@+id/item_delivery_image"></ImageView>
+			android:id="@+id/dialog_delivery_image"></ImageView>
 		<LinearLayout android:id="@+id/linearLayout2"
 			android:layout_marginLeft="5dp" android:layout_width="fill_parent"
 			android:layout_height="fill_parent" android:orientation="vertical">
@@ -29,12 +31,12 @@
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:textStyle="bold" android:textColor="@color/black"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
-					android:text="TextView" android:id="@+id/item_delivery_MSgoods"></TextView>
+					android:text="TextView" android:id="@+id/dialog_delivery_MSgoods"></TextView>
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:layout_marginLeft="5dp" android:textColor="@color/black"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
 					android:text="TextView" android:textStyle="bold"
-					android:id="@+id/item_delivery_goodsname"></TextView>
+					android:id="@+id/dialog_delivery_goodsname"></TextView>
 			</LinearLayout>
 			<LinearLayout android:id="@+id/linearLayout4"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -45,14 +47,14 @@
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:textColor="@color/black" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="TextView"
-					android:layout_marginRight="5dp" android:id="@+id/item_delivery_customer"></TextView>
+					android:layout_marginRight="5dp" android:id="@+id/dialog_delivery_customer"></TextView>
 				<ImageView android:src="@drawable/phone_icon"
 					android:layout_width="40dp" android:layout_height="wrap_content"
 					android:id="@+id/imageView2"></ImageView>
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:textColor="@color/black" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="TextView"
-					android:id="@+id/item_delivery_phone"></TextView>
+					android:id="@+id/dialog_delivery_phone"></TextView>
 			</LinearLayout>
 			<LinearLayout android:id="@+id/linearLayout4"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -63,7 +65,7 @@
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:textColor="@color/black" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="TextView"
-					android:id="@+id/item_delivery_address"></TextView>
+					android:id="@+id/dialog_delivery_address"></TextView>
 			</LinearLayout>
 			<LinearLayout android:id="@+id/linearLayout5"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -74,7 +76,7 @@
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:textStyle="bold" android:textColor="@color/red"
 					android:layout_width="wrap_content" android:layout_height="wrap_content"
-					android:text="TextView" android:id="@+id/item_delivery_price"></TextView>
+					android:text="TextView" android:id="@+id/dialog_delivery_price"></TextView>
 			</LinearLayout>
 			<LinearLayout android:id="@+id/linearLayout5"
 				android:layout_width="fill_parent" android:layout_height="wrap_content"
@@ -85,31 +87,34 @@
 				<TextView android:textAppearance="?android:attr/textAppearanceSmall"
 					android:textColor="@color/black" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="TextView"
-					android:id="@+id/item_delivery_date"></TextView>
+					android:id="@+id/dialog_delivery_date"></TextView>
 			</LinearLayout>
 		</LinearLayout>
 	</LinearLayout>
 	<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
-		android:textSize="18dp" android:layout_marginTop="20dp"
+		android:textSize="18dp" android:layout_marginTop="5dp"
 		android:textAppearance="?android:attr/textAppearanceSmall"
 		android:textStyle="bold" android:layout_width="wrap_content"
 		android:text="@string/delivery_content_note" android:textColor="@color/black"
 		android:gravity="center_horizontal" android:layout_gravity="center_horizontal"></TextView>
 	<EditText android:lines="6" android:layout_marginLeft="10dp"
 		android:layout_marginRight="10dp" android:layout_height="wrap_content"
-		android:id="@+id/editText1" android:layout_width="fill_parent">
+		android:id="@+id/dialog_delivery_note" android:layout_width="fill_parent"
+		android:gravity="top">
 		<requestFocus></requestFocus>
 	</EditText>
 	<CheckBox android:textColor="@color/black" android:textStyle="bold"
 		android:text="@string/delivery_content_check"
 		android:layout_marginLeft="10dp" android:layout_height="wrap_content"
-		android:id="@+id/checkBox1" android:layout_width="fill_parent"></CheckBox>
+		android:id="@+id/dialog_delivery_check" android:layout_width="fill_parent"></CheckBox>
 	<LinearLayout android:layout_height="wrap_content"
 		android:id="@+id/linearLayout6" android:layout_width="fill_parent"
 		android:layout_gravity="center_vertical" android:gravity="center_horizontal">
 		<Button android:layout_height="wrap_content" android:text="@string/delivery_content_note"
-			android:layout_width="wrap_content" android:id="@+id/button2"></Button>
+			android:layout_width="wrap_content" android:id="@+id/dialog_delivery_ok"></Button>
 		<Button android:layout_height="wrap_content" android:text="@string/delivery_content_map"
-			android:layout_width="wrap_content" android:id="@+id/button1"></Button>
+			android:layout_width="wrap_content" android:id="@+id/dialog_delivery_map"></Button>
+		<Button android:text="@string/delivery_dialog_close" android:id="@+id/dialog_delivery_close"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
 	</LinearLayout>
 </LinearLayout>
