--- a/SourceCode/Android/android_staff/res/layout/chat_content.xml
+++ b/SourceCode/Android/android_staff/res/layout/chat_content.xml
@@ -15,23 +15,32 @@
 			android:layout_height="wrap_content" android:textColor="@color/black"
 			android:text="@string/chat_title"></TextView>
 	</LinearLayout>
-	<ListView android:layout_height="wrap_content"
-		android:id="@+id/listView_chat_content" android:layout_weight="1.0"
-		android:layout_width="fill_parent"></ListView>
+	<ListView android:layout_height="wrap_content" android:id="@+id/listView_chat_content"
+		android:layout_weight="1.0" android:layout_width="fill_parent"></ListView>
+	<LinearLayout android:id="@+id/linearLayout3"
+		android:layout_width="fill_parent" android:layout_height="wrap_content">
+		<ImageView android:layout_width="wrap_content"
+			android:layout_height="wrap_content" android:id="@+id/imageView2"
+			android:src="@drawable/icon_app"></ImageView>
+		<EditText android:layout_width="wrap_content" android:id="@+id/chat_content_des"
+			android:layout_weight="1.0" android:layout_height="wrap_content">
+			<requestFocus></requestFocus>
+		</EditText>
+		<Button android:layout_width="wrap_content" android:id="@+id/chat_content_send"
+			android:layout_height="wrap_content" android:text="@string/chat_button"></Button>
+	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
 		android:id="@+id/linearLayout1" android:layout_height="wrap_content"
 		android:background="@drawable/bg_header" android:gravity="center_vertical">
 		<ImageButton android:id="@+id/chat_home" android:src="@drawable/icon_home"
 			android:layout_weight="1.0" android:background="@color/transparent"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
-		<ImageButton android:id="@+id/chat_favorite"
-			android:src="@drawable/icon_favarous" android:layout_weight="1.0"
-			android:background="@color/transparent" android:layout_width="wrap_content"
-			android:layout_height="wrap_content"></ImageButton>
-		<ImageButton android:id="@+id/chat_setting"
-			android:src="@drawable/icon_setting" android:layout_weight="1.0"
-			android:layout_width="wrap_content" android:background="@color/transparent"
-			android:layout_height="wrap_content"></ImageButton>
+		<ImageButton android:id="@+id/chat_favorite" android:src="@drawable/icon_favarous"
+			android:layout_weight="1.0" android:background="@color/transparent"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
+		<ImageButton android:id="@+id/chat_setting" android:src="@drawable/icon_setting"
+			android:layout_weight="1.0" android:layout_width="wrap_content"
+			android:background="@color/transparent" android:layout_height="wrap_content"></ImageButton>
 		<ImageButton android:id="@+id/chat_about" android:src="@drawable/icon_net"
 			android:layout_weight="1.0" android:background="@color/transparent"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
