--- a/SourceCode/Android/android_staff/res/layout/delivery_content.xml
+++ b/SourceCode/Android/android_staff/res/layout/delivery_content.xml
@@ -20,17 +20,17 @@
 	<LinearLayout android:layout_width="fill_parent"
 		android:id="@+id/linearLayout1" android:layout_height="wrap_content"
 		android:background="@drawable/bg_header" android:gravity="center_vertical">
-		<ImageButton android:id="@+id/delivery_home" android:src="@drawable/icon_home"
+		<ImageButton android:id="@+id/delivery_home" android:src="@drawable/menu_delivery"
 			android:layout_weight="1.0" android:background="@color/transparent"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
-		<ImageButton android:id="@+id/delivery_favorite"
-			android:src="@drawable/icon_favarous" android:layout_weight="1.0"
+		<ImageButton android:id="@+id/delivery_food"
+			android:src="@drawable/menu_food" android:layout_weight="1.0"
 			android:background="@color/transparent" android:layout_width="wrap_content"
 			android:layout_height="wrap_content"></ImageButton>
-		<ImageButton android:id="@+id/delivery_setting" android:src="@drawable/icon_setting"
+		<ImageButton android:id="@+id/delivery_chat" android:src="@drawable/menu_chat"
 			android:layout_weight="1.0" android:layout_width="wrap_content"
 			android:background="@color/transparent" android:layout_height="wrap_content"></ImageButton>
-		<ImageButton android:id="@+id/delivery_about" android:src="@drawable/icon_net"
+		<ImageButton android:id="@+id/delivery_statistic" android:src="@drawable/menu_stats"
 			android:layout_weight="1.0" android:background="@color/transparent"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"></ImageButton>
 	</LinearLayout>
