--- a/SourceCode/Android/android_client/res/layout/register_content.xml
+++ b/SourceCode/Android/android_client/res/layout/register_content.xml
@@ -3,77 +3,99 @@
 	android:orientation="vertical" android:background="@color/black"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
 	<LinearLayout android:id="@+id/linearLayout1"
-		android:layout_height="wrap_content" android:layout_width="fill_parent">
-		<Button android:text="Button" android:id="@+id/register_back"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-		<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium"
+		android:background="@drawable/map_menubar"
+		android:layout_marginBottom="5dp" android:layout_height="40dp"
+		android:layout_width="fill_parent" android:gravity="center_vertical">
+		<Button android:id="@+id/register_back" android:background="@drawable/btn_back"
+			android:layout_width="wrap_content" android:layout_height="wrap_content"
+			android:gravity="left" android:layout_gravity="left"></Button>
+		<TextView android:layout_marginLeft="65dp" android:id="@+id/textView1"
+			android:textAppearance="?android:attr/textAppearanceMedium"
 			android:layout_height="wrap_content" android:textStyle="bold"
-			android:layout_width="wrap_content" android:text="@string/register_title"></TextView>
+			android:layout_width="wrap_content" android:text="@string/register_title"
+			android:gravity="center_horizontal"></TextView>
 	</LinearLayout>
-	<LinearLayout android:id="@+id/linearLayout2"
-		android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
-		android:layout_height="fill_parent" android:layout_width="fill_parent"
-		android:orientation="vertical">
-		<TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_nickname"></TextView>
-		<EditText android:layout_height="wrap_content" android:id="@+id/register_nickname"
-			android:layout_width="fill_parent">
-			<requestFocus></requestFocus>
-		</EditText>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_password"></TextView>
-		<EditText android:layout_height="wrap_content" android:id="@+id/register_password"
-			android:layout_width="fill_parent" android:inputType="textPassword"></EditText>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_name"></TextView>
-		<EditText android:layout_height="wrap_content" android:id="@+id/register_fullname"
-			android:layout_width="fill_parent"></EditText>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_sex"></TextView>
-		<LinearLayout android:id="@+id/linearLayout3"
-			android:layout_height="wrap_content" android:layout_width="fill_parent"
-			android:gravity="center_vertical|right">
-			<ImageView android:id="@+id/imageView1"
-				android:layout_marginRight="5dp" android:layout_height="wrap_content"
-				android:layout_width="wrap_content" android:src="@drawable/icon_male"></ImageView>
-			<CheckBox android:id="@+id/register_male" android:checked="true"
-				android:layout_width="wrap_content" android:layout_marginRight="25dp"
-				android:layout_height="wrap_content"></CheckBox>
-			<ImageView android:id="@+id/imageView2"
-				android:layout_marginRight="5dp" android:layout_height="wrap_content"
-				android:layout_width="wrap_content" android:src="@drawable/icon_female"></ImageView>
-			<CheckBox android:id="@+id/register_female" android:layout_width="wrap_content"
-				android:layout_height="wrap_content"></CheckBox>
+	<ScrollView android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/scrollView1"
+		android:layout_gravity="center_horizontal">
+		<LinearLayout android:id="@+id/linearLayout2"
+			android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
+			android:layout_gravity="center_horizontal" android:layout_height="fill_parent"
+			android:layout_width="fill_parent" android:orientation="vertical">
+			<TextView android:id="@+id/textView2"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_nickname"></TextView>
+			<EditText android:layout_height="wrap_content"
+				android:background="@drawable/nm_edittext" android:id="@+id/register_nickname"
+				android:layout_width="fill_parent">
+				<requestFocus></requestFocus>
+			</EditText>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_password"></TextView>
+			<EditText android:layout_height="wrap_content" android:id="@+id/register_password"
+				android:background="@drawable/nm_edittext" android:layout_width="fill_parent"
+				android:inputType="textPassword"></EditText>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_name"></TextView>
+			<EditText android:layout_height="wrap_content" android:id="@+id/register_fullname"
+				android:background="@drawable/nm_edittext" android:layout_width="fill_parent"></EditText>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_sex"></TextView>
+			<LinearLayout android:id="@+id/linearLayout3"
+				android:layout_height="wrap_content" android:layout_width="fill_parent"
+				android:gravity="center_vertical|right">
+				<ImageView android:id="@+id/imageView1"
+					android:layout_marginRight="5dp" android:layout_height="wrap_content"
+					android:layout_width="wrap_content" android:src="@drawable/icon_male"></ImageView>
+				<CheckBox android:id="@+id/register_male" android:checked="true"
+					android:layout_width="wrap_content" android:layout_marginRight="25dp"
+					android:layout_height="wrap_content"></CheckBox>
+				<ImageView android:id="@+id/imageView2"
+					android:layout_marginRight="5dp" android:layout_height="wrap_content"
+					android:layout_width="wrap_content" android:src="@drawable/icon_female"></ImageView>
+				<CheckBox android:id="@+id/register_female"
+					android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
+			</LinearLayout>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_email"></TextView>
+			<EditText android:inputType="textEmailAddress"
+				android:background="@drawable/nm_edittext" android:layout_height="wrap_content"
+				android:id="@+id/register_mail" android:layout_width="fill_parent"></EditText>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_phone"></TextView>
+			<EditText android:layout_height="wrap_content" android:id="@+id/register_phone"
+				android:background="@drawable/nm_edittext" android:layout_width="fill_parent"
+				android:inputType="number"></EditText>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_address"></TextView>
+			<EditText android:layout_height="wrap_content" android:id="@+id/register_address"
+				android:background="@drawable/nm_edittext" android:layout_width="fill_parent"></EditText>
+			<TextView android:id="@+id/textView3"
+				android:textAppearance="?android:attr/textAppearanceSmall"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:textStyle="bold" android:text="@string/register_birthday"></TextView>
+			<EditText android:layout_height="wrap_content" android:id="@+id/register_birthday"
+				android:background="@drawable/nm_edittext" android:layout_width="fill_parent"
+				android:inputType="date"></EditText>
+			<CheckBox android:text="@string/register_check" android:id="@+id/register_check"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
+			<Button android:id="@+id/register_ok" android:layout_height="wrap_content"
+				android:layout_gravity="center_horizontal" android:background="@drawable/nm_buy_btn"
+				android:textStyle="bold" android:textColor="@color/white"
+				android:layout_width="wrap_content" android:text="@string/register_button"></Button>
 		</LinearLayout>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_email"></TextView>
-		<EditText android:inputType="textEmailAddress"
-			android:layout_height="wrap_content" android:id="@+id/register_mail"
-			android:layout_width="fill_parent"></EditText>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_phone"></TextView>
-		<EditText android:layout_height="wrap_content" android:id="@+id/register_phone"
-			android:layout_width="fill_parent" android:inputType="number"></EditText>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_address"></TextView>
-		<EditText android:layout_height="wrap_content" android:id="@+id/register_address"
-			android:layout_width="fill_parent"></EditText>
-		<TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceSmall"
-			android:layout_height="wrap_content" android:layout_width="wrap_content"
-			android:textStyle="bold" android:text="@string/register_birthday"></TextView>
-		<EditText android:layout_height="wrap_content" android:id="@+id/register_birthday"
-			android:layout_width="fill_parent" android:inputType="date"></EditText>
-		<CheckBox android:text="@string/register_check" android:id="@+id/register_check"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
-		<Button android:id="@+id/register_ok" android:layout_height="wrap_content"
-			android:layout_gravity="center_horizontal" android:layout_width="wrap_content"
-			android:text="@string/register_button"></Button>
-	</LinearLayout>
+	</ScrollView>
 </LinearLayout>
